2007-12-19
----------

* Initial starting points, config parser and option parsers
* Creation of directories for maildir usage